# tg-content-downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  config.py  contracts.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3a39c1263afe_small_edit_in_cached_content_table.py  422e338d5b75_added_content_type_to_table_cached_.py  93f26ff53358_added_table_content_files_which_relates_.py  ab2626013b3b_change_content_type_to_is_video_in_.py  c2966f1ff0f9_.py
db/: database.py  models.py
